README.md: remove logo, looks ugly on GitHub; add more info to Requirements section; refine Usage section; Vagrantfile: minor fixes; NFS sharing requires extra packages on host and is not portable, so I removed it; install: change into installations/ before running the scripts; installations/vagrant.sh: complete rewrite with lots of sanity checks; installations/virtualbox.sh: complete rewrite, lots of sanity checks and graceful handling of extpack installation; provision: script is run from inside the machine, fix the paths; provisioning/docker.sh: wrote script to install docker on rexbox; provisioning/erlang_elixir.sh: avoid duplication; provisioning/ruby.sh: skip install if already installed; provisioning/tools.sh: tell exactly what you're installing;

--- a/install
+++ b/install
@@ -1,6 +1,8 @@
 #!/usr/bin/env bash
 
 # Prepares the system for installing Vagrant and the RexBox
+#~ set -e
+#~ set -x
 
 echo -e "\
              _             \n\
@@ -23,4 +25,7 @@ source "./helpers.sh"
     Remove ~/rexbox directory from the home folder and run the \
 script again."
 
-./installations/virtualbox.sh
+cd installations/
+
+bash virtualbox.sh
+bash vagrant.sh
